Trying to setup jpackage